--- a/src/robot_x1/param/costmap_common_params.yaml
+++ b/src/robot_x1/param/costmap_common_params.yaml
@@ -1,10 +1,11 @@
-obstacle_range: 2.5
-raytrace_range: 3.0
-footprint: [[-0.12, -0.12], [-0.12, 0.12], [0.12, 0.12], [0.12, -0.12]]
-inflation_radius: 0.15  #0.2
+# 通用配置文件
+obstacle_range: 2.5 # 机器人检测障碍物的最大范围/米
+raytrace_range: 3.0 # 机器人检测自由空间的最大范围/米
+footprint: [[-0.14, -0.13], [-0.14, 0.13], [0.14, 0.13], [0.14, -0.13]] # 机器人在二维地图上的占用面积
+inflation_radius: 0.2 # 障碍物的膨胀参数，也就是机器人和障碍物的最小安全距离
 transform_tolerance: 0.1
 
-observation_sources: scan
+observation_sources: scan # 传感器信息
 scan:
   data_type: LaserScan
   topic: scan
